# roole

./: .gitignore  Cargo.toml  README.md
custom/: addsub.smt2  mult.smt2
src/: args.rs  assignment.rs  bitvector.rs  check.rs  domain.rs  evaluate.rs  exit.rs  formula.rs  lib.rs  main.rs  parse.rs  parser.rs  problem.rs  resources.rs  solver.rs
src/bitvector/: abstr.rs  concr.rs  util.rs
src/bitvector/abstr/: arith.rs  bitwise.rs  cmp.rs  eq.rs  ext.rs  shift.rs  support.rs
src/check/: brute.rs  clever.rs  eval.rs
src/check/clever/: learned.rs  partition.rs  partitions.rs  stats.rs
src/domain/: bitvector.rs  traits.rs  value.rs
src/domain/bitvector/: abstr.rs  bound.rs  concr.rs  interval.rs  util.rs
src/domain/traits/: forward.rs
src/domain/value/: abstr.rs  param_valuation.rs  refin.rs  three_valued.rs
src/parser/: operation.rs
src/problem/: assignment.rs  decision.rs  domain.rs  eval.rs  evaluator.rs  formula.rs  linear.rs  operation.rs  solution.rs  symbolic.rs
src/problem/domain/: arith.rs  bitvector.rs  bitwise.rs  cmp.rs  eq.rs  ext.rs  linear.rs  shift.rs  support.rs
src/problem/evaluator/: domain.rs  format.rs
src/problem/formula/: format.rs  operation.rs
src/problem/linear/: arith.rs  bitwise.rs  combination.rs  relation.rs  support.rs  system.rs
src/problem/operation/: bi.rs  linear.rs
src/problem/solution/: proof.rs
src/problem/symbolic/: arith.rs  bitvector.rs  bitwise.rs  cmp.rs  eq.rs  ext.rs  linear.rs  shift.rs  support.rs
src/resources/: cpu_time_limit.rs  heap_limit.rs  time_limit.rs
src/solver/: cadical.rs  internal.rs  learned.rs  partition.rs  preprocess.rs  stats.rs
src/tools/: manyroole.rs
tools/manyroole/: Cargo.toml
tools/plot/: plot.sh  process.sh  proof.gp  proof_sizes.sh  space.gp  time.gp
value/: interpretation.rs
(+122 files in other folders)
