
[package]
name = "roole"
version = "0.1.0"
edition = "2024"

[features]
cadical = ["cadical-sys"]
mem-limit = ["limit-alloc"]

[workspace]
members = ["tools/manyroole"]

[dependencies]
aws-smt-ir = "0.3.0"
num = "0.4.3"
indexmap = "2.12.0"

serde = "1.0.228"
seq-macro = "0.3.6"
itertools = "0.11.0"

indicatif = "0.18.2"
clap = { version = "4.5.53", features = ["derive"] }

cadical-sys = { version = "0.7.0", optional = true }

limit-alloc = { version = "0.1.0", optional = true }

[lints.clippy]
uninlined_format_args = "allow"

[profile.release]
debug = true
