
[package]
name = "roole"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[features]
cadical = ["cadical-sys"]

[workspace]
members = ["tools/manyroole"]

[dependencies]
aws-smt-ir = "0.3.0"
num = "0.4.3"
indexmap = "2.12.0"

serde = "1.0.228"
seq-macro = "0.3.6"
itertools = "0.11.0"
num-traits = "0.2"
num-derive = "0.4"

indicatif = "0.18.2"
clap = { version = "4.5.53", features = ["derive"] }

cadical-sys = { version = "0.7.0", optional = true }

cpu-time = "1.0.0"

[profile.release]
debug = true
