
[package]
name = "roole"

license = "MIT OR Apache-2.0"
repository = "https://github.com/onderjan/roole"
description = "Satisfiability Modulo Theories (SMT) solver for the theory of bitvectors"

version = "0.1.0"
rust-version = "1.91"
edition = "2024"

[workspace]
members = ["tools/manyroole"]

[dependencies]
aws-smt-ir = "0.3.0"
num = "0.4.3"
indexmap = "2.12.0"

serde = "1.0.228"
seq-macro = "0.3.6"
itertools = "0.11.0"
num-traits = "0.2"
num-derive = "0.4"

indicatif = "0.18.2"
clap = { version = "4.5.53", features = ["derive"] }

cpu-time = "1.0.0"

[profile.release]
debug = true
